; ModuleID = '/home/carl/AnghaBench/redshift/src/extr_location-manual.c_location_manual_print_help.c'
source_filename = "/home/carl/AnghaBench/redshift/src/extr_location-manual.c_location_manual_print_help.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"Specify location manually.\0A\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.2 = private unnamed_addr constant [38 x i8] c"  lat=N\09\09Latitude\0A  lon=N\09\09Longitude\0A\00", align 1
@.str.3 = private unnamed_addr constant [113 x i8] c"Both values are expected to be floating point numbers,\0Anegative values representing west / south, respectively.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @location_manual_print_help to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @location_manual_print_help(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i8* @_(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @fputs(i8* %3, i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32* %6)
  %8 = call i8* @_(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str.2, i64 0, i64 0))
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @fputs(i8* %8, i32* %9)
  %11 = load i32*, i32** %2, align 8
  %12 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32* %11)
  %13 = call i8* @_(i8* getelementptr inbounds ([113 x i8], [113 x i8]* @.str.3, i64 0, i64 0))
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @fputs(i8* %13, i32* %14)
  %16 = load i32*, i32** %2, align 8
  %17 = call i32 @fputs(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32* %16)
  ret void
}

declare dso_local i32 @fputs(i8*, i32*) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
